--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"gulp-sass": "^4.0.2",
 		"gulp-uglify": "^3.0.2",
 		"html-minifier": "^4.0.0",
+		"stylelint-config-recommended": "^2.2.0",
 		"tailwindcss": "^1.0.5"
 	}
 }
