--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"html-minifier": "^4.0.0",
 		"stylelint-config-recommended": "^2.2.0",
 		"tailwindcss": "^1.1.2"
+	},
+	"dependencies": {
+		"@yaireo/tagify": "^2.31.2"
 	}
 }
